# grammar-benchmark

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
configs/: default.yaml
results/: hf_google_flan-t5-small_BEA2019Dataset.json
src/llm_grammar_bench/: __init__.py  config.py  types.py
src/llm_grammar_bench/backends/: __init__.py  anthropic.py  anthropic_compatible.py  base.py  generic_openai.py  huggingface.py  openai.py  openrouter.py
src/llm_grammar_bench/cli/: __init__.py  main.py
src/llm_grammar_bench/datasets/: __init__.py  base.py  bea2019.py
src/llm_grammar_bench/evaluation/: __init__.py  _bert_patch.py  evaluator.py  metrics.py  results.py
src/llm_grammar_bench/strategies/: __init__.py  base.py  edit_based.py  few_shot.py  seq2seq.py
src/llm_grammar_bench/utils/: cache.py  concurrency.py  retry.py
tests/: conftest.py  test_cli.py  test_config.py
tests/test_backends/: test_anthropic.py  test_base.py  test_factory.py  test_huggingface.py  test_openai.py  test_openrouter.py
tests/test_datasets/: test_bea2019.py  test_factory.py
tests/test_evaluation/: test_evaluator.py  test_metrics.py  test_results.py
tests/test_strategies/: test_edit_based.py  test_factory.py  test_few_shot.py  test_seq2seq.py
tests/test_utils/: test_cache.py  test_concurrency.py  test_retry.py
