[project]
name = "llmgrammarbench"
version = "0.1.0"
description = "Benchmark framework for evaluating AI models on grammatical error correction using BEA-2019"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Pepijn Frenken", email = "pepijnfrenken@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gec-metrics>=0.1.1",
    "datasets>=2.14",
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
huggingface = ["transformers>=4.36", "torch>=2.0"]
openrouter = ["openai>=1.0"]
all = ["llmgrammarbench[openai,anthropic,huggingface,openrouter]"]

[project.scripts]
llm-grammar-bench = "llm_grammar_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_grammar_bench"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "RUF",
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["llm_grammar_bench"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ty]

[tool.ty.environment]
python-platform = "linux"
python-version = "3.11"

[tool.ty.analysis]
allowed-unresolved-imports = ["anthropic", "anthropic.**", "transformers", "transformers.**", "torch", "torch.**", "gec_metrics", "gec_metrics.**"]


[tool.ty.rules]
all = "error"
unresolved-import = "error"
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short", "--strict-markers"]

[tool.coverage.run]
source = ["src/llm_grammar_bench"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self\\.debug:",
    "if settings\\.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "ty>=0.0.30",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "responses>=0.25",
]
